Fix li text-align

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -160,6 +160,10 @@ body {
   text-align: justify;
 }
 
+li {
+  text-align: left;
+}
+
 a {
   color: var(--link-color);
   text-decoration: none;
